<resources>
    <string name="app_name">learn</string>
    <string name="hello">Hello</string>
    <string name="apple">apple</string>
    <string name="initial">CA</string>
    <string name="plus">+</string>
    <string name="result">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>