<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="end"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:gravity="center_vertical"
            android:text="@string/initial"
            android:textSize="100sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_700"
            android:gravity="center|center_vertical"
            android:text="@string/plus"
            android:textSize="100sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:gravity="center|center_vertical"
            android:text="@string/result"
            android:textSize="100sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <TextView
            android:id="@+id/init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:gravity="center_vertical"
            android:text="@string/initial"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:gravity="center|center_vertical"
            android:text="@string/zero"
            android:textSize="100sp" />


        <TextView
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_700"
            android:gravity="center|center_vertical"
            android:text="@string/plus"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:gravity="center|center_vertical"
            android:text="@string/result"
            android:textSize="100sp" />
    </LinearLayout>


    <!--    <TextView-->
    <!--        android:id="@+id/textView2"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="1"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/textView3"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="2"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/textView4"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView2"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView4"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="3"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/linearLayout"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView3"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView7"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="4"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/textView5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView5"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="5"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/textView6"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView7"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView6"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:text="6"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="40sp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/linearLayout"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView5"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView4" />-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3">

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="3">

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="40sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>